--- a/src/presentation/app/dashboard/pages/home/home.html
+++ b/src/presentation/app/dashboard/pages/home/home.html
@@ -1,4 +1,5 @@
-<section class="min-h-screen text-slate-300 bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]">
+<section
+    class="min-h-screen text-slate-300 bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]">
 
     <!-- cabecera principal con titulo -->
     <header class="mb-6 pt-4 relative h-32 ">
@@ -43,7 +44,7 @@
                         class="w-full px-4 py-2 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-amber-500">
                         @for (gender of genderOptions; track gender) {
                         <option [value]="gender">
-                            {{ gender || 'Todos' | translate:'gender'  }}
+                            {{ gender || 'Todos' | translate:'gender' }}
                         </option>
                         }
                     </select>
@@ -97,7 +98,20 @@
                     alt="Avatar de {{character.name}}">
             </div>
             <li class="text-slate-200 group-hover:text-amber-400">{{ character.name }}</li>
-            <li class="text-slate-200 group-hover:text-amber-400">{{ character.status }}</li>
+            <li class="text-slate-200 group-hover:text-amber-400 flex items-center justify-center gap-2">
+                @if (character.status === 'Dead') {
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-skull-icon lucide-skull">
+                    <path d="m12.5 17-.5-1-.5 1h1z" />
+                    <path
+                        d="M15 22a1 1 0 0 0 1-1v-1a2 2 0 0 0 1.56-3.25 8 8 0 1 0-11.12 0A2 2 0 0 0 8 20v1a1 1 0 0 0 1 1z" />
+                    <circle cx="15" cy="12" r="1" />
+                    <circle cx="9" cy="12" r="1" />
+                </svg>
+                {{ character.status }}
+                }
+            </li>
         </ul>
         }
         } @else {
@@ -133,7 +147,23 @@
                     alt="Avatar de {{character.name}}">
             </div>
             <li class="text-slate-200 group-hover:text-amber-400">{{ character.name }}</li>
-            <li class="text-slate-200 group-hover:text-amber-400">{{ character.status }}</li>
+            <li class="text-slate-200 group-hover:text-amber-400 flex items-center justify-center gap-2">
+                @if (character.status === 'Dead') {
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-skull-icon lucide-skull">
+                    <path d="m12.5 17-.5-1-.5 1h1z" />
+                    <path
+                        d="M15 22a1 1 0 0 0 1-1v-1a2 2 0 0 0 1.56-3.25 8 8 0 1 0-11.12 0A2 2 0 0 0 8 20v1a1 1 0 0 0 1 1z" />
+                    <circle cx="15" cy="12" r="1" />
+                    <circle cx="9" cy="12" r="1" />
+                </svg>
+                {{ character.status }}
+                }@else if (character.status === 'Alive') {
+                    <svg width="15px" height="15px" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M512 512m-448 0a448 448 0 1 0 896 0 448 448 0 1 0-896 0Z" fill="#4CAF50"></path><path d="M738.133333 311.466667L448 601.6l-119.466667-119.466667-59.733333 59.733334 179.2 179.2 349.866667-349.866667z" fill="#CCFF90"></path></g></svg>
+                     {{ character.status }}
+                }
+            </li>
         </ul>
         }
         }
@@ -159,68 +189,80 @@
         </div>
     </section>
     }
-        <!-- Modal de detalles del personaje -->
-        @if (showModal && selectedCharacter) {
-        <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-70 p-4"
+    <!-- Modal de detalles del personaje -->
+@if (modalState.show && modalState.character) {
+    <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-70 p-4 transition-all ease-in duration-1000" 
             (click)="closeModal()">
-            <div class="relative bg-gray-800 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-y-auto"
-                (click)="$event.stopPropagation()">
-                <!-- Botón de cerrar -->
-                <button class="absolute top-4 right-4 text-amber-400 hover:text-amber-300" (click)="closeModal()">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </button>
+        <div class="relative bg-gray-800 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-y-auto"
+            (click)="$event.stopPropagation()">
+            <!-- Botón de cerrar -->
+            <button class="absolute top-4 right-4 text-amber-400 hover:text-amber-300" (click)="closeModal()">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
 
-                <!-- Contenido del modal -->
-                <div class="p-6">
-                    <div class="flex flex-col md:flex-row gap-6">
-                        <!-- Imagen del personaje -->
-                        <div class="flex-shrink-0">
-                            <img class="w-full h-auto max-w-xs rounded-lg" src="{{selectedCharacter.image}}"
-                                alt="{{selectedCharacter.name}}">
-                        </div>
+            <!-- Contenido del modal -->
+            <div class="p-6">
+                <div class="flex flex-col md:flex-row gap-6">
+                    <!-- Imagen del personaje -->
+                    <div class="flex-shrink-0">
+                        <img class="w-full h-auto max-w-xs rounded-lg" src="{{modalState.character.image}}"
+                            alt="{{modalState.character.name}}">
+                    </div>
 
-                        <!-- Información del personaje -->
-                        <div class="text-slate-300">
-                            <h2 class="text-3xl font-bold text-amber-400 mb-4">{{ selectedCharacter.name }}</h2>
+                    <!-- Información del personaje -->
+                    <div class="text-slate-300">
+                        <h2 class="text-3xl font-bold text-amber-400 mb-4">{{ modalState.character.name }}</h2>
 
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                                <div>
-                                    <h3 class="text-lg font-semibold text-amber-300">Estado</h3>
-                                    <p>{{ selectedCharacter.status |  translate:'status' }}</p>
-                                </div>
-
-                                <div>
-                                    <h3 class="text-lg font-semibold text-amber-300">Género</h3>
-                                    <p>{{ selectedCharacter.gender | translate:'gender' }}</p>
-                                </div>
-
-                                <div>
-                                    <h3 class="text-lg font-semibold text-amber-300">Especie</h3>
-                                    <p>{{ selectedCharacter.species || 'Desconocida' }}</p>
-                                </div>
-
-                                <div>
-                                    <h3 class="text-lg font-semibold text-amber-300">Origen</h3>
-                                    <p>{{ selectedCharacter.origin.name || 'Desconocido' }}</p>
-                                </div>
-
-                                <div class="md:col-span-2">
-                                    <h3 class="text-lg font-semibold text-amber-300">Ubicación actual</h3>
-                                    <p>{{ selectedCharacter.location.name || 'Desconocida' }}</p>
-                                </div>
-
-
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                            <div>
+                                <h3 class="text-lg font-semibold text-amber-300">Estado</h3>
+                                <p class="flex items-center gap-2">
+                                    @if (modalState.character.status === 'Dead') {
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="lucide lucide-skull-icon lucide-skull">
+                                        <path d="m12.5 17-.5-1-.5 1h1z" />
+                                        <path
+                                            d="M15 22a1 1 0 0 0 1-1v-1a2 2 0 0 0 1.56-3.25 8 8 0 1 0-11.12 0A2 2 0 0 0 8 20v1a1 1 0 0 0 1 1z" />
+                                        <circle cx="15" cy="12" r="1" />
+                                        <circle cx="9" cy="12" r="1" />
+                                    </svg>
+                                }
+                                    {{ modalState.character.status | translate:'status' }}
+                                </p>
                             </div>
+
+                            <div>
+                                <h3 class="text-lg font-semibold text-amber-300">Género</h3>
+                                <p>{{ modalState.character.gender | translate:'gender' }}</p>
+                            </div>
+
+                            <div>
+                                <h3 class="text-lg font-semibold text-amber-300">Especie</h3>
+                                <p>{{ modalState.character.species || 'Desconocida' }}</p>
+                            </div>
+
+                            <div>
+                                <h3 class="text-lg font-semibold text-amber-300">Origen</h3>
+                                <p>{{ modalState.character.origin.name || 'Desconocido' }}</p>
+                            </div>
+
+                            <div class="md:col-span-2">
+                                <h3 class="text-lg font-semibold text-amber-300">Ubicación actual</h3>
+                                <p>{{ modalState.character.location.name || 'Desconocida' }}</p>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        }
+    </div>
+    }
 
 </section>
 
